@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7756 2004/11/07 21:15:28 kristerw Exp $
+$NetBSD: CHANGES,v 1.7757 2004/11/07 21:44:21 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5151,3 +5151,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated perl to 5.8.5 [wiz 2004-11-07]
 	Added bmon-2.0.1 [minskim 2004-11-07]
 	Updated gxmame to 0.34bnb4 [kristerw 2004-11-07]
+	Updated wistumbler2 to 2.00pre9nb1 [jmmv 2004-11-07]
+	Added wistumbler2-gtk-2.00pre9 [jmmv 2004-11-07]
